# pulsar

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  commands.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  util.rs
src/components/: header.tsx  results-list.tsx  results-table.tsx  scanner copy.tsx  scanner.tsx  trashbin.tsx
src/lib/: format.ts  get-dir-name.ts  store.ts  updater.ts
