[package]
name = "nmw"
version = "0.0.0"
description = "A Tauri App"
authors = ["@AtilaFassina"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-read-file", "fs-read-dir", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.1"
fs_extra = "1.3.0"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.47"
rayon = "1.7.0"
specta = "1.0.5"
tauri-specta = { version = "1.0.2", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
