[package]
name = "pulsar"
version = "0.1.2"
description = "A Tauri App"
authors = ["@AtilaFassina"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "pulsar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "=2.0.0-beta.22", features = [] }
tauri-plugin-shell = "2.0.0-beta.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.6"
tauri-plugin-dialog = "2.0.0-beta.5"
tokio = { version = "1.32.0", features = ["fs"] }
thiserror = "1.0.47"
regex = "1.9.5"
log = { version = "0.4.20", features = ["release_max_level_off"] }
globwalk = "0.8.1"
futures = "0.3.28"
tauri-plugin-devtools = "2.0.0-beta.3"
specta = "=2.0.0-rc.12"
tauri-specta = { version = "=2.0.0-rc.11", features = ["javascript", "typescript"] }
tauri-plugin-updater = "2.0.0-beta.8"

# Optimize for smaller binary size
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
